--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ APP_ID=24810254
 API_HASH=aadb42caec01695fa0a77c09b3e0ef47
 BOT_TOKEN=7766680940:AAFRLQDTwpbreK-dZ-kk8fupB6tHkMBwk2g
 OWNER=7543269959
-DEV=1772989999
+DEV=7459740388
 THUMBNAIL=https://telegra.ph/file/f9e5d783542906418412d.jpg
-ffmpegcode = ["-preset faster -c:v libx265 -s 854x480 -x265-params 'bframes=8:psy-rd=1:ref=3:aq-mode=3:aq-strength=0.8:deblock=1,1' -metadata 'title=Encoded By TGVid-Comp (https://github.com/Zylern/TGVid-Comp)' -pix_fmt yuv420p -crf 30 -c:a libopus -b:a 32k -c:s copy -map 0 -ac 2 -ab 32k -vbr 2 -level 3.1 -threads 1"]
+ffmpegcode = ["-map 0 -c:v copy -c:a libopus -b:a 14.4k -vbr constrained -ac 2 -compression_level 10 -frame_duration 60"]
